--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
-    "@types/uuid": "^8.3.1",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -42,25 +41,28 @@
     "@types/ini": "^1.3.31",
     "@types/inquirer": "^8.1.3",
     "@types/node": "^15.12.5",
+    "@types/qs": "^6.9.7",
+    "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
     "dts-bundle": "^0.7.3",
     "execa": "^4.0.3",
     "fs-extra": "^9.0.1",
+    "inquirer": "^8.2.0",
     "lodash": "^4.17.20",
+    "ora": "5.4.1",
     "rollup": "^2.26.3",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript2": "^0.27.2",
     "tslib": "^2.0.1",
-    "typescript": "^4.4.4",
-    "ora": "5.4.1",
-    "inquirer": "^8.2.0"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "commander": "^8.3.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.6",
     "ini": "^2.0.0",
+    "qs": "^6.10.1",
     "uuid": "^8.3.2"
   }
 }
