--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/ini": "^1.3.31",
     "@types/inquirer": "^8.1.3",
     "@types/node": "^15.12.5",
+    "@types/node-fetch": "2",
     "@types/qs": "^6.9.7",
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
@@ -62,6 +63,7 @@
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.6",
     "ini": "^2.0.0",
+    "node-fetch": "2",
     "qs": "^6.10.1",
     "uuid": "^8.3.2"
   }
