--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@noderun/pp",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "命令行管理模板项目",
   "main": "dist/pp.umd.js",
   "module": "dist/pp.esm.js",
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "cli-table3": "^0.6.2",
     "commander": "^8.3.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.6",
