--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@noderun/pp",
-  "version": "0.0.17",
+  "version": "0.0.20",
   "description": "命令行管理模板项目",
   "main": "dist/pp.umd.js",
   "module": "dist/pp.esm.js",
@@ -12,6 +12,9 @@
       "cjs"
     ]
   },
+  "files": [
+    "dist"
+  ],
   "author": {
     "name": "noderun",
     "email": "1549469775@qq.com",
@@ -47,14 +50,14 @@
     "cross-env": "^7.0.3",
     "dts-bundle": "^0.7.3",
     "execa": "^4.0.3",
-    "inquirer": "^8.2.0",
     "lodash": "^4.17.20",
     "rollup": "^2.26.3",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript2": "^0.27.2",
     "typescript": "^4.4.4"
-  },
-  "dependencies": {
+},
+"dependencies": {
+    "inquirer": "^8.2.0",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.2",
     "commander": "^8.3.0",
