--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      - name: Build
+        run: pnpm build
       - name: publish
         run: npm publish
         env:
